<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/story_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="30dp"
    android:layout_marginHorizontal="12dp"
    android:background="@drawable/card_corner"
    android:layout_marginVertical="8dp">

    <ImageView
        android:id="@+id/iv_story_image"
        android:layout_width="181dp"
        android:layout_height="200dp"
        android:contentDescription="@string/story_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toTopOf="@id/container"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_story_desc"
        android:layout_width="184dp"
        android:layout_height="70dp"
        android:layout_gravity="end|bottom"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="24dp"
        android:textSize="16sp"
        tools:text="@string/lorem_ipsum" />

    <TextView
        android:id="@+id/tv_story_title"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="10sp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_story_image"
        tools:text="@string/name_input" />



</androidx.cardview.widget.CardView>