<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.upload.UploadActivity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/iv_preview"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:contentDescription="@string/upload_image"
        android:src="@drawable/ic_image_24"
        app:layout_constraintVertical_bias="0.35"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        style="@style/Widget.MaterialComponents.Button"
        android:backgroundTint="@color/choco"
        android:id="@+id/btn_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:textSize="20sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_gallery"
        app:layout_constraintTop_toBottomOf="@id/iv_preview"
        app:layout_constraintHorizontal_chainStyle="spread" />

    <Button
        style="@style/Widget.MaterialComponents.Button"
        android:backgroundTint="@color/choco"
        android:id="@+id/btn_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:textSize="20sp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toTopOf="@id/btn_camera"
        app:layout_constraintStart_toEndOf="@id/btn_camera"
        app:layout_constraintEnd_toEndOf="parent" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:id="@+id/let_desc"
        android:layout_height="140dp"
        android:layout_marginTop="16dp"
        android:hint="@string/description"
        app:layout_constraintTop_toBottomOf="@id/btn_gallery"
        app:layout_constraintStart_toStartOf="@id/btn_camera"
        app:layout_constraintEnd_toEndOf="@id/btn_gallery"
        style="@style/ThemeOverlay.Material3.MaterialTimePicker.Display.TextInputEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/et_desc"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            android:scrollbarStyle="insideInset"
            android:gravity="top"
            android:inputType="textMultiLine"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_upload"
        style="@style/Widget.MaterialComponents.Button"
        android:backgroundTint="@color/choco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/let_desc"
        android:layout_marginHorizontal="24dp"
        android:text="@string/upload"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>