<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.auth.AuthActivity">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:alpha="0"
        tools:alpha="100"
        android:textColor="?colorOnPrimary"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="16dp"
        android:text="@string/welcome_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:layout_constraintTop_toTopOf="parent"/>
    <Button
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:alpha="0"
        tools:alpha="100"
        android:textColor="@color/white"
        android:backgroundTint="@color/choco"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@id/tv_welcome"
        app:layout_constraintEnd_toEndOf="@id/tv_welcome"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_sign_in"
        android:alpha="0"
        tools:alpha="100"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/btn_sign_up"
        android:backgroundTint="@color/choco"
        app:layout_constraintStart_toEndOf="@id/btn_sign_up"
        android:layout_marginStart="50dp"
        style="@style/Widget.MaterialComponents.Button"
        />


</androidx.constraintlayout.widget.ConstraintLayout>